# shaver

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: main.ipynb
scripts/: count_freq.py  evaluate.py  evaluate_codebook.py  evaluate_folder.py  evaluate_mag_ptq.py  export_model.py  infer_rasp.py  sage_row.py  test_script_help.py  train.py
src/: base.py  const.py  estimator.py  imputers.py  loggers.py  mock_cls.py  monte_carlo.py  sage_row.py  sage_row_mixup.py  trainer.py  utils.py  validator.py
src/datasets/: __init__.py  avazu.py  criteo.py  kdd_dataset.py
src/models/: __init__.py  codebook_emb.py  dcn.py  deepfm.py  layer_dcn.py  ptq_emb.py
tests/: test_api_simple.py  test_codebook_init.py  test_script_help.py
